third_party/move/move-compiler-v2/tests/checking/inlining/resources_invalid.exp

Diagnostics:
error: The type argument to `exists` and `global` must be a struct type but `T` is not
  ┌─ tests/checking/inlining/resources_invalid.move:8:9
  │
8 │         borrow_global<T>(ref.addr)
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
